--- a/res/layout/overview.xml
+++ b/res/layout/overview.xml
@@ -4,10 +4,11 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     >
-<TextView  
+<TextView
     android:layout_width="fill_parent" 
-    android:layout_height="wrap_content" 
-    android:text="Hello World, MyActivity"
+    android:layout_height="wrap_content"
+    android:id="@+id/placeholder"
+    android:layout_weight="1"
     />
 </LinearLayout>
 
