--- a/res/layout/overview.xml
+++ b/res/layout/overview.xml
@@ -8,7 +8,7 @@
     android:layout_width="fill_parent" 
     android:layout_height="wrap_content"
     android:id="@+id/placeholder"
-    android:layout_weight="1"
     />
+<include android:id="@+id/test" layout="@layout/menu" />
 </LinearLayout>
 
