--- a/code/android/res/layout/main.xml
+++ b/code/android/res/layout/main.xml
@@ -4,6 +4,7 @@
          android:layout_width="fill_parent"
          android:layout_height="fill_parent">
     <LinearLayout
+            android:background="@drawable/background1_blue"
             android:orientation="vertical"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
