--- a/code/android/res/layout/overview.xml
+++ b/code/android/res/layout/overview.xml
@@ -8,44 +8,46 @@
 		<View android:layout_height="2dip" android:background="#FF909090" />
 		<TableRow>
 			<TextView android:text="Top 3 Categories" android:padding="3dip"
-				android:textStyle="bold" />
+				android:textStyle="bold" style="@style/DefaultTextFont" />
 			<TextView android:text="Amount" android:padding="3dip"
-				android:textStyle="bold" />
+				android:textStyle="bold" style="@style/DefaultTextFont" />
 		</TableRow>
 		<View android:layout_height="2dip" android:background="#FF909090" />
 		<TableRow>
 			<TextView android:text="Category 1" android:id="@+id/top3_category_1"
-				android:padding="3dip" />
+				android:padding="3dip" style="@style/DefaultTextFont" />
 			<TextView android:text="Amount 1" android:id="@+id/top3_amount_1"
-				android:padding="3dip" />
+				android:padding="3dip" style="@style/DefaultTextFont" />
 		</TableRow>
 		<TableRow>
 			<TextView android:text="Category 2" android:id="@+id/top3_category_2"
-				android:padding="3dip" />
+				android:padding="3dip" style="@style/DefaultTextFont" />
 			<TextView android:text="Amount 2" android:id="@+id/top3_amount_2"
-				android:padding="3dip" />
+				android:padding="3dip" style="@style/DefaultTextFont" />
 		</TableRow>
 		<TableRow>
 			<TextView android:text="Category 3" android:id="@+id/top3_category_3"
-				android:padding="3dip" />
+				android:padding="3dip" style="@style/DefaultTextFont" />
 			<TextView android:text="Amount 3" android:id="@+id/top3_amount_3"
-				android:padding="3dip" />
+				android:padding="3dip" style="@style/DefaultTextFont" />
 		</TableRow>
 		<View android:layout_height="2dip" android:background="#FF909090" />
 		<TableRow>
 			<TextView android:text="Average Consumption"
-				android:padding="3dip" android:textStyle="bold" />
+				android:padding="3dip" android:textStyle="bold" style="@style/DefaultTextFont" />
 		</TableRow>
 		<View android:layout_height="2dip" android:background="#FF909090" />
 		<TableRow>
-			<TextView android:text="Per day" android:padding="3dip" />
+			<TextView android:text="Per day" android:padding="3dip"
+				style="@style/DefaultTextFont" />
 			<TextView android:text="average_day" android:id="@+id/average_day"
-				android:padding="3dip" />
+				android:padding="3dip" style="@style/DefaultTextFont" />
 		</TableRow>
 		<TableRow>
-			<TextView android:text="Per week" android:padding="3dip" />
+			<TextView android:text="Per week" android:padding="3dip"
+				style="@style/DefaultTextFont" />
 			<TextView android:text="average_week" android:id="@+id/average_week"
-				android:padding="3dip" />
+				android:padding="3dip" style="@style/DefaultTextFont" />
 		</TableRow>
 		<View android:layout_height="2dip" android:background="#FF909090" />
 
@@ -59,18 +61,22 @@
 				android:id="@+id/transactionTableLayout">
 				<TableRow>
 					<TextView android:text="Last transactions"
-						android:padding="3dip" android:textStyle="bold" />
+						android:padding="3dip" android:textStyle="bold" style="@style/DefaultTextFont" />
 				</TableRow>
 				<View android:layout_height="2dip" android:background="#FF909090" />
 				<TableRow>
 					<TextView android:layout_weight="1" android:layout_width="0dip"
-						android:text="Date" android:padding="3dip" android:textStyle="bold" />
+						android:text="Date" android:padding="3dip" android:textStyle="bold"
+						style="@style/DefaultTextFont" />
 					<TextView android:layout_weight="1" android:layout_width="0dip"
-						android:text="Text" android:padding="3dip" android:textStyle="bold" />
+						android:text="Text" android:padding="3dip" android:textStyle="bold"
+						style="@style/DefaultTextFont" />
 					<TextView android:layout_weight="1" android:layout_width="0dip"
-						android:text="Category" android:padding="3dip" android:textStyle="bold" />
+						android:text="Category" android:padding="3dip" android:textStyle="bold"
+						style="@style/DefaultTextFont" />
 					<TextView android:layout_weight="1" android:layout_width="0dip"
-						android:text="Amount" android:padding="3dip" android:textStyle="bold" />
+						android:text="Amount" android:padding="3dip" android:textStyle="bold"
+						style="@style/DefaultTextFont" />
 				</TableRow>
 				<View android:layout_height="2dip" android:background="#FF909090" />
 
