--- a/code/android/res/layout/transactions.xml
+++ b/code/android/res/layout/transactions.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	android:layout_width="match_parent" android:layout_height="match_parent"
-	android:weightSum="100" android:orientation="vertical">	
+	android:weightSum="100" android:orientation="vertical">
 	<FrameLayout android:layout_width="fill_parent"
 		android:layout_height="fill_parent">
 		<ScrollView android:layout_width="fill_parent"
 			android:layout_height="fill_parent" android:fillViewport="true">
 			<TableLayout android:layout_width="fill_parent"
-				android:layout_height="fill_parent" android:stretchColumns="1" android:id="@+id/transaction_table_layout">
-				
+				android:layout_height="fill_parent" android:stretchColumns="1"
+				android:id="@+id/transaction_table_layout">
+
 			</TableLayout>
 		</ScrollView>
 	</FrameLayout>
