--- a/code/android/src/main/android/res/drawable/button_add.xml
+++ b/code/android/src/main/android/res/drawable/button_add.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <!-- When selected, use -->
-    <item android:drawable="@drawable/add_button_2_selected"
+    <item android:drawable="@drawable/medical_selected"
           android:state_pressed="true"/>
     <!-- When not selected, use -->
-    <item android:drawable="@drawable/add_button"/>
+    <item android:drawable="@drawable/medical"/>
 </selector>
