--- a/code/android/src/main/android/res/layout/transactions.xml
+++ b/code/android/src/main/android/res/layout/transactions.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	android:orientation="vertical" android:layout_width="fill_parent"
-	android:layout_height="fill_parent">
-	<ListView android:id="@+id/android:list" android:layout_width="fill_parent"
-		android:layout_height="fill_parent" android:cacheColorHint="@android:color/transparent"/>
-	<TextView android:id="@+id/android:empty"
-		android:layout_width="fill_parent" android:layout_height="fill_parent"
-		android:text="@string/transactions_no_items" />
-</LinearLayout>
+              android:orientation="vertical" android:layout_width="fill_parent"
+              android:layout_height="fill_parent">
+    <ListView android:id="@id/android:list" android:layout_width="fill_parent"
+              android:layout_height="fill_parent" android:cacheColorHint="@android:color/transparent"/>
+    <TextView android:id="@id/android:empty"
+              android:layout_width="fill_parent" android:layout_height="fill_parent"
+              android:text="@string/transactions_no_items"/>
+</LinearLayout> 
