--- a/code/android/src/main/android/res/layout/transactionrow.xml
+++ b/code/android/src/main/android/res/layout/transactionrow.xml
@@ -1,48 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	android:layout_width="fill_parent" android:layout_height="?android:attr/listPreferredItemHeight"
-	android:padding="6dip">
-	<ImageView android:id="@+id/icon" android:layout_width="wrap_content"
-		android:layout_height="fill_parent" android:layout_marginRight="6dip"
-		android:src="@drawable/icon" />
-	<LinearLayout android:orientation="vertical"
-		android:layout_width="0dip" android:layout_weight="1"
-		android:layout_height="fill_parent">
-		<TableLayout android:layout_width="fill_parent"
-			android:layout_height="fill_parent" android:stretchColumns="1">
-			<TableRow>
-				<TextView android:layout_weight="1" android:layout_width="0dip"
-					android:text="Date" android:padding="3dip" android:textStyle="bold"
-					style="@style/DefaultTextFont"></TextView>
-				<TextView android:id="@+id/trow_tv_date"
-					android:layout_weight="1" android:layout_width="0dip"
-					android:padding="3dip" style="@style/DefaultTextFont"></TextView>
-			</TableRow>
-			<TableRow>
-				<TextView android:layout_weight="1" android:layout_width="0dip"
-					android:text="Text" android:padding="3dip" android:textStyle="bold"
-					style="@style/DefaultTextFont"></TextView>
-				<TextView android:id="@+id/trow_tv_text"
-					android:layout_weight="1" android:layout_width="0dip"
-					android:padding="3dip" style="@style/DefaultTextFont"></TextView>
-			</TableRow>
-			<TableRow>
+              android:layout_width="fill_parent"
+              android:layout_height="?android:attr/listPreferredItemHeight"
+              android:padding="6dip">
+    <ImageView android:id="@+id/tag_icon" android:layout_width="wrap_content"
+               android:layout_height="fill_parent"
+               android:layout_marginRight="6dip"/>
+    <LinearLayout android:orientation="vertical"
+                  android:layout_width="0dip" android:layout_weight="1"
+                  android:layout_height="fill_parent">
+        <TableLayout android:layout_width="fill_parent"
+                     android:layout_height="fill_parent"
+                     android:stretchColumns="1">
+            <TableRow>
                 <TextView android:layout_weight="1" android:layout_width="0dip"
-                    android:text="Category" android:padding="3dip" android:textStyle="bold"
-                    style="@style/DefaultTextFont"></TextView>
-                <TextView android:id="@+id/trow_tv_category"
-                    android:layout_weight="1" android:layout_width="0dip"
-                    android:padding="3dip" style="@style/DefaultTextFont"></TextView>
+                          android:text="Date" android:padding="3dip"
+                          android:textStyle="bold"
+                          style="@style/DefaultTextFont"></TextView>
+                <TextView android:id="@+id/trow_tv_date"
+                          android:layout_weight="1" android:layout_width="0dip"
+                          android:padding="3dip"
+                          style="@style/DefaultTextFont"></TextView>
             </TableRow>
             <TableRow>
                 <TextView android:layout_weight="1" android:layout_width="0dip"
-                    android:text="Amount" android:padding="3dip" android:textStyle="bold"
-                    style="@style/DefaultTextFont"></TextView>
-                <TextView android:id="@+id/trow_tv_amount"
-                    android:layout_weight="1" android:layout_width="0dip"
-                    android:padding="3dip" style="@style/DefaultTextFont"></TextView>
+                          android:text="Text" android:padding="3dip"
+                          android:textStyle="bold"
+                          style="@style/DefaultTextFont"></TextView>
+                <TextView android:id="@+id/trow_tv_text"
+                          android:layout_weight="1" android:layout_width="0dip"
+                          android:padding="3dip"
+                          style="@style/DefaultTextFont"></TextView>
             </TableRow>
-		</TableLayout>
-		
-	</LinearLayout>
+            <TableRow>
+                <TextView android:layout_weight="1" android:layout_width="0dip"
+                          android:text="Category" android:padding="3dip"
+                          android:textStyle="bold"
+                          style="@style/DefaultTextFont"></TextView>
+                <TextView android:id="@+id/trow_tv_category"
+                          android:layout_weight="1" android:layout_width="0dip"
+                          android:padding="3dip"
+                          style="@style/DefaultTextFont"></TextView>
+            </TableRow>
+            <TableRow>
+                <TextView android:layout_weight="1" android:layout_width="0dip"
+                          android:text="Amount" android:padding="3dip"
+                          android:textStyle="bold"
+                          style="@style/DefaultTextFont"></TextView>
+                <TextView android:id="@+id/trow_tv_amount"
+                          android:layout_weight="1" android:layout_width="0dip"
+                          android:padding="3dip"
+                          style="@style/DefaultTextFont"></TextView>
+            </TableRow>
+        </TableLayout>
+
+    </LinearLayout>
 </LinearLayout>
