--- a/code/android/src/main/android/res/layout/addtransaction.xml
+++ b/code/android/src/main/android/res/layout/addtransaction.xml
@@ -1,45 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent" android:layout_height="match_parent"
-              android:orientation="vertical" android:background="@drawable/background1_blue">
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:orientation="vertical"
+              android:background="@drawable/background3">
 
     <TableLayout android:layout_width="fill_parent" android:layout_weight="1"
-                 android:layout_height="wrap_content" android:stretchColumns="1">
+                 android:layout_height="wrap_content"
+                 android:stretchColumns="1">
 
         <TableRow>
-            <TextView android:layout_weight="1" android:layout_width="0dip" android:padding="3dip"
+            <TextView android:layout_weight="1" android:layout_width="0dip"
+                      android:padding="3dip"
                       android:textStyle="bold" style="@style/DefaultTextFont"
-                      android:layout_height="wrap_content" android:text="Text: "></TextView>
-            <EditText android:id="@+id/edittext_text" android:layout_weight="1" android:layout_width="0dip"
+                      android:layout_height="wrap_content"
+                      android:text="Text: "></TextView>
+            <EditText android:id="@+id/edittext_text" android:layout_weight="1"
+                      android:layout_width="0dip"
                       android:layout_height="wrap_content"/>
         </TableRow>
 
         <TableRow>
-            <TextView android:layout_weight="1" android:layout_width="0dip" android:id="@+id/dateDisplay"
-                      android:padding="3dip" android:textStyle="bold" style="@style/DefaultTextFont"
-                      android:layout_height="wrap_content" android:text="Date: "/>
-            <Button android:id="@+id/pickDate" android:layout_weight="1" android:layout_width="0dip"
-                    android:layout_height="wrap_content" android:text="Change the date"/>
+            <TextView android:layout_weight="1" android:layout_width="0dip"
+                      android:id="@+id/dateDisplay"
+                      android:padding="3dip" android:textStyle="bold"
+                      style="@style/DefaultTextFont"
+                      android:layout_height="wrap_content"
+                      android:text="Date: "/>
+            <Button android:id="@+id/pickDate" android:layout_weight="1"
+                    android:layout_width="0dip"
+                    android:layout_height="wrap_content"
+                    android:text="Change the date"/>
         </TableRow>
 
         <TableRow>
-            <TextView android:layout_weight="1" android:layout_width="0dip" android:padding="3dip"
+            <TextView android:layout_weight="1" android:layout_width="0dip"
+                      android:padding="3dip"
                       android:textStyle="bold" style="@style/DefaultTextFont"
-                      android:layout_height="wrap_content" android:text="Amount: "></TextView>
-            <EditText android:id="@+id/edittext_amount" android:layout_weight="1" android:layout_width="0dip"
+                      android:layout_height="wrap_content"
+                      android:text="Amount: "></TextView>
+            <EditText android:id="@+id/edittext_amount"
+                      android:layout_weight="1" android:layout_width="0dip"
                       android:layout_height="wrap_content"
                       android:inputType="numberDecimal"/>
         </TableRow>
 
         <TableRow>
-            <TextView android:layout_weight="1" android:layout_width="0dip" android:padding="3dip"
+            <TextView android:layout_weight="1" android:layout_width="0dip"
+                      android:padding="3dip"
                       android:textStyle="bold" style="@style/DefaultTextFont"
                       android:layout_height="wrap_content"
                       android:text="@string/category_prompt"/>
-            <Spinner android:id="@+id/spinner_category" android:layout_weight="1" android:layout_width="0dip"
-                     android:layout_height="wrap_content" android:prompt="@string/category_prompt"/>
+            <Spinner android:id="@+id/spinner_category"
+                     android:layout_weight="1" android:layout_width="0dip"
+                     android:layout_height="wrap_content"
+                     android:prompt="@string/category_prompt"/>
         </TableRow>
     </TableLayout>
-    <Button android:text="Add transaction" android:id="@+id/button_add_transaction" android:layout_weight="0"
-            android:layout_width="fill_parent" android:layout_height="wrap_content"></Button>
+    <Button android:text="Add transaction"
+            android:id="@+id/button_add_transaction" android:layout_weight="0"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"></Button>
 </LinearLayout>
