--- a/code/android/src/main/android/res/layout/transactions.xml
+++ b/code/android/src/main/android/res/layout/transactions.xml
@@ -1,14 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ViewFlipper xmlns:android="http://schemas.android.com/apk/res/android" android:id="@+id/flipper"
              android:layout_width="fill_parent" android:layout_height="fill_parent">
-
-    <LinearLayout
-            android:orientation="vertical" android:layout_width="fill_parent"
-            android:layout_height="fill_parent">
-        <TextView
-                android:layout_width="fill_parent" android:layout_height="fill_parent"
-                android:text="lol"/>
-    </LinearLayout>
     <LinearLayout
             android:orientation="vertical" android:layout_width="fill_parent"
             android:layout_height="fill_parent">
@@ -18,11 +10,20 @@
                   android:layout_width="fill_parent" android:layout_height="fill_parent"
                   android:text="@string/transactions_no_items"/>
     </LinearLayout>
+
     <LinearLayout
             android:orientation="vertical" android:layout_width="fill_parent"
             android:layout_height="fill_parent">
         <TextView
                 android:layout_width="fill_parent" android:layout_height="fill_parent"
-                android:text="wtfbbq"/>
+                android:text="page 2"/>
+    </LinearLayout>
+
+    <LinearLayout
+            android:orientation="vertical" android:layout_width="fill_parent"
+            android:layout_height="fill_parent">
+        <TextView
+                android:layout_width="fill_parent" android:layout_height="fill_parent"
+                android:text="page 3"/>
     </LinearLayout>
 </ViewFlipper>
