--- a/code/android/src/main/android/res/layout/editexternaltransaction.xml
+++ b/code/android/src/main/android/res/layout/editexternaltransaction.xml
@@ -55,7 +55,7 @@
                      android:prompt="@string/category_prompt"/>
         </TableRow>
     </TableLayout>
-    <Button android:text="Edit transaction"
+    <Button android:text="Save"
             android:id="@+id/editexternaltransaction_button_edittransaction"
             android:layout_weight="0"
             android:layout_width="fill_parent"
