--- a/code/android/src/main/android/res/layout/edittransaction.xml
+++ b/code/android/src/main/android/res/layout/edittransaction.xml
@@ -14,7 +14,7 @@
                       android:padding="3dip"
                       android:textStyle="bold" style="@style/DefaultTextFont"
                       android:layout_height="wrap_content"
-                      android:text="@string/transaction_text"></TextView>
+                      android:text="@string/transaction_text"/>
             <EditText android:id="@+id/edittransaction_edittext_text"
                       android:layout_weight="1" android:layout_width="0dip"
                       android:layout_height="wrap_content"/>
@@ -37,7 +37,7 @@
                       android:padding="3dip"
                       android:textStyle="bold" style="@style/DefaultTextFont"
                       android:layout_height="wrap_content"
-                      android:text="@string/transaction_amount"></TextView>
+                      android:text="@string/transaction_amount"/>
             <EditText android:id="@+id/edittransaction_edittext_amount"
                       android:layout_weight="1" android:layout_width="0dip"
                       android:layout_height="wrap_content"
@@ -72,5 +72,5 @@
             android:id="@+id/edittransaction_button_edittransaction"
             android:layout_weight="0"
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content"></Button>
+            android:layout_height="wrap_content"/>
 </LinearLayout>
