--- a/code/android/src/main/android/res/layout/titlebar.xml
+++ b/code/android/src/main/android/res/layout/titlebar.xml
@@ -6,12 +6,12 @@
     <TextView android:layout_width="wrap_content"
               android:layout_height="wrap_content" android:id="@+id/titleTvLeft"
               android:textColor="#FFFFFF"
-              android:textStyle="bold"></TextView>
+              android:textStyle="bold"/>
     <ImageButton android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:id="@+id/addButton"
                  android:layout_alignParentRight="true"
-                 android:background="@drawable/button_add"></ImageButton>
+                 android:background="@drawable/button_add"/>
 
     <ProgressBar android:id="@+id/leadProgressBar"
                  style="?android:attr/progressBarStyleSmall"
@@ -19,5 +19,5 @@
                  android:layout_height="wrap_content"
                  android:layout_centerVertical="true"
                  android:layout_toRightOf="@+id/titleTvLeft"
-                 android:paddingLeft="3dip"></ProgressBar>
+                 android:paddingLeft="3dip"/>
 </RelativeLayout>
