Changing category on transactions now works ... awesome!

--- a/code/android/src/main/android/res/layout/addtransaction.xml
+++ b/code/android/src/main/android/res/layout/addtransaction.xml
@@ -3,7 +3,8 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical"
-              android:background="@drawable/background3">
+              android:background="@drawable/background3"
+              android:focusable="true" android:focusableInTouchMode="true">
 
     <TableLayout android:layout_width="fill_parent" android:layout_weight="1"
                  android:layout_height="wrap_content"
